Fixed offscreen mouse events and canvas overflow

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -16,17 +16,23 @@
   flex: 0 0 350px;
   height: 100%;
 }
-canvas {
-  background-color: white;
-}
-.canvasSpace{
+.canvasWindow{
   width: 100%;
   height: 100%;
+  display: flex;
+  overflow: auto;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
   -o-user-select: none;
   user-select: none;
+}
+.canvasSpace{
+  margin: auto;
+  line-height: 0;
+}
+canvas {
+  background-color: white;
 }
 
 #chat li{
